--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,24 +1,62 @@
 ---
+import Header from "src/components/Header.astro";
+import Main from "../components/Main.astro";
+
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <style>
+      #app {
+        display: grid;
+        grid-template-areas:
+          "header header header"
+          "aside main main";
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 350px 1fr;
+        color: whitesmoke;
+      }
+      svg {
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+      }
+      path {
+        fill: #e4e4e7; /* zinc-500 */
+      }
+
+      path:hover {
+        fill: #f9fafb; /* zinc-100 */
+      }
+    </style>
+    <title>{title}</title>
+  </head>
+  <body>
+    <div id="app" class="relative h-screen p-[32px] gap-[16px] bg-zinc-900">
+      <header class="[grid-area:header] h-[75px] rounded-lg bg-zinc-800">
+        <Header />
+      </header>
+      <aside
+        class="[grid-area:aside] flex-col flex overflow-y-auto rounded-lg bg-zinc-800"
+      >
+        Aside
+      </aside>
+      <main class="[grid-area:main] rounded-lg bg-zinc-800">
+        <Main />
+      </main>
+    </div>
+  </body>
 </html>
 <style is:global>
 	:root {
